<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F374F"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.spaskhristov.bullsandcows.MainActivity" >

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@drawable/button_selector"
        android:radius="10dp"
        android:text="@string/newGame" />

    <requestFocus />

    <Button
        android:id="@+id/btnNewGameABC"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRules"
        android:layout_below="@+id/btnNewGame"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_selector"
        android:radius="10dp"
        android:text="@string/newGameABC" />

    <Button
        android:id="@+id/btnRules"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnNewGame"
        android:layout_below="@+id/btnNewGameABC"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_selector"
        android:radius="10dp"
        android:text="@string/rules" />

</RelativeLayout>