<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6DBFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.spaskhristov.bullsandcows.GameActivityABC" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <NumberPicker
            android:id="@+id/charPicker1"
            android:layout_width="70dip"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/charPicker2"
            android:layout_width="70dip"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/charPicker3"
            android:layout_width="70dip"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/charPicker4"
            android:layout_width="70dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNewTurnABC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:background="@drawable/button_selector"
        android:text="@android:string/ok"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/tableHeadABC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrowViewResultABC"
        android:layout_alignRight="@+id/scrowViewResultABC"
        android:layout_below="@+id/btnNewTurnABC"
        android:gravity="center"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/rowHeadABC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#787878"
            android:columnWidth="200dp"
            android:weightSum="1"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/headCol1ABC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tabelTurn"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/headCol2ABC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tabelGuess"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/headCol3ABC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tabelBulls"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/headCol4ABC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tabelCows"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/scrowViewResultABC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/btnNewTurnABC"
        android:layout_alignRight="@+id/btnNewTurnABC"
        android:layout_below="@+id/tableHeadABC" >

        <TableLayout
            android:id="@+id/tableResultABC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

</RelativeLayout>